Refactors ACME parser to support original version, adds half baked registers control, fixes

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/MainWindow.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/MainWindow.axaml
@@ -179,6 +179,9 @@
       <TabItem Header="Errors">
         <v:ErrorMessages DataContext="{Binding ErrorMessagesViewModel}" />
       </TabItem>
+      <TabItem Header="Registers">
+        <v:Registers DataContext="{Binding RegistersViewModel}" />
+      </TabItem>
     </TabControl>
     <ContentControl>
       <ContentControl.Content>
