--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Project.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Project.axaml
@@ -12,7 +12,7 @@
     </StackPanel>
     <StackPanel Orientation="Vertical">
       <TextBlock Classes="h1" Text="{Binding ProjectFile, StringFormat={} Project {0}}" />
-      <TextBlock Classes="label">PRG path</TextBlock>
+      <TextBlock Classes="label">ACME output file</TextBlock>
       <DockPanel LastChildFill="True">
         <Button x:Name="Open" DockPanel.Dock="Right" Click="OpenPrgFile">...</Button>
         <TextBox Text="{Binding PrgPath}" Margin="0,0,4,0" />
